"Finalizing lab 6 https://github.com/USCbiostats/PM566/issues/23"

--- a/06-lab.Rmd
+++ b/06-lab.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "Lab 06 - Text Mining"
-output: html_document
+output: github_document
+always_allow_html: true
 ---
 
 ```{r setup}
@@ -35,7 +36,7 @@ This markdown document should be rendered using `github_document` document.
 You should load in `dplyr`, (or `data.table` if you want to work that way), `ggplot2` and `tidytext`.
 If you don't already have `tidytext` then you can install with
 
-```{r, eval=FALSE}
+```{r}
 install.packages("tidytext")
 ```
 
@@ -46,11 +47,16 @@ Loading in reference transcription samples from https://www.mtsamples.com/
 ```{r, warning=FALSE, message=FALSE}
 library(readr)
 library(dplyr)
+library(ggplot2)
+library(tidytext)
+library(tidyverse)
 mt_samples <- read_csv("https://raw.githubusercontent.com/USCbiostats/data-science-data/master/00_mtsamples/mtsamples.csv")
 mt_samples <- mt_samples %>%
   select(description, medical_specialty, transcription)
 
 head(mt_samples)
+
+mt_samples$transcription[1]
 ```
 
 ---
@@ -59,9 +65,10 @@ head(mt_samples)
 
 We can use `count()` from `dplyr` to figure out how many different catagories do we have? Are these catagories related? overlapping? evenly distributed?
 
+- There are 40 categories not being overlapped.
 ```{r}
 mt_samples %>%
-  count(___, sort = TRUE)
+  count(medical_specialty, sort = TRUE)
 ```
 
 ---
@@ -74,6 +81,18 @@ mt_samples %>%
 
 Explain what we see from this result. Does it makes sense? What insights (if any) do we get?
 
+- Most of them are stop words except "patient". After removing them it will show truely interesting words. 
+
+```{r}
+mt_samples %>%
+  unnest_tokens(token, transcription) %>%
+  count(token, sort = TRUE) %>%
+  top_n(20, n) %>%
+  ggplot(aes(n, fct_reorder(token, n))) +
+  geom_col()
+```
+
+
 ---
 
 ## Question 3
@@ -83,11 +102,53 @@ Explain what we see from this result. Does it makes sense? What insights (if any
 
 What do we see know that we have removed stop words? Does it give us a better idea of what the text is about?
 
+- After removing stop words and numbers, it shows more clear idea.
+
+```{r}
+mt_samples %>%
+  unnest_tokens(word, transcription) %>%
+  anti_join(stop_words, by = c("word")) %>%
+  count(word, sort = TRUE) %>%
+  top_n(20, n) %>%
+  ggplot(aes(n, fct_reorder(word, n))) +
+  geom_col()
+```
+
+```{r}
+mt_samples %>%
+  unnest_tokens(word, transcription) %>%
+  anti_join(stop_words, by = c("word")) %>%
+  filter(!(word %in% as.character(seq(0, 100)))) %>%
+  count(word, sort = TRUE) %>%
+  top_n(20, n) %>%
+  ggplot(aes(n, fct_reorder(word, n))) +
+  geom_col()
+```
+
 ---
 
 # Question 4
 
 repeat question 2, but this time tokenize into bi-grams. how does the result change if you look at tri-grams?
+
+- Tri-grams looks more sentences that make sense.
+
+```{r}
+mt_samples %>%
+  unnest_ngrams(ngram, transcription, n = 2) %>%
+  count(ngram, sort = TRUE) %>%
+  top_n(20, n) %>%
+  ggplot(aes(n, fct_reorder(ngram, n))) +
+  geom_col()
+
+mt_samples %>%
+  unnest_ngrams(ngram, transcription, n = 3) %>%
+  count(ngram, sort = TRUE) %>%
+  top_n(20, n) %>%
+  ggplot(aes(n, fct_reorder(ngram, n))) +
+  geom_col()
+  
+```
 
 ---
 
@@ -95,11 +156,49 @@ repeat question 2, but this time tokenize into bi-grams. how does the result cha
 
 Using the results you got from questions 4. Pick a word and count the words that appears after and before it.
 
+
+```{r}
+library(tidyr)
+mt_bigrams <- mt_samples %>%
+  unnest_ngrams(token, transcription, n = 2) %>%
+  separate(token, into = c("word1", "word2"), sep = " ") %>%
+  select(word1, word2)
+
+mt_bigrams %>%
+  filter(word1 == "patient") %>%
+  count(word2, sort = TRUE)
+
+mt_bigrams %>%
+  filter(word2 == "patient") %>%
+  count(word1, sort = TRUE)
+
+
+mt_bigrams %>%
+  anti_join(
+    tidytext::stop_words %>% select(word), by = c("word1" = "word")
+  ) %>%
+  anti_join(
+    tidytext::stop_words %>% select(word), by = c("word2" = "word")
+  ) %>%
+  count(word1, word2, sort = TRUE)
+  
+```
+
 ---
 
 # Question 6 
 
 Which words are most used in each of the specialties. you can use `group_by()` and `top_n()` from `dplyr` to have the calculations be done within each specialty. Remember to remove stopwords. How about the most 5 used words?
+
+```{r}
+mt_samples %>%
+  unnest_tokens(token, transcription) %>%
+  anti_join(tidytext::stop_words, by = c("token" = "word")) %>%
+  group_by(medical_specialty) %>%
+  count(token) %>%
+  top_n(5, n)
+```
+
 
 # Question 7 - extra
 
