lab9 done https://github.com/USCbiostats/PM566/issues/28

--- a/lab9.Rmd
+++ b/lab9.Rmd
@@ -19,7 +19,7 @@ Give yourself a few minutes to think about what you just learned. List three
 examples of problems that you believe may be solved using parallel computing,
 and check for packages on the HPC CRAN task view that may be related to it.
 
-- Cross-validation in Machine Learning: can use packages in''. 'carat', 'mlr'.
+- Cross-validation in Machine Learning: can use packages like 'carat', 'mlr'.
 - Bootstrapping: 'boot'
 - Monte Carlo Simulation: 'parallel'
 - Agent Based Modeling: 'parallel'
@@ -31,6 +31,7 @@ parallel:
 
 ```{r}
 library(microbenchmark)
+library(parallel)
 ```
 
 
@@ -61,21 +62,22 @@ microbenchmark::microbenchmark(
 
 2.  Find the column max (hint: Checkout the function `max.col()`).
 
-```{r p2-fun2, eval = FALSE}
+```{r p2-fun2, eval = TRUE}
 # Data Generating Process (10 x 10,000 matrix)
 set.seed(1234)
 x <- matrix(rnorm(1e4), nrow=10)
+
 # Find each column's max value
 fun2 <- function(x) {
   apply(x, 2, max)
 }
 fun2alt <- function(x) {
-  # YOUR CODE HERE
+  x[cbind(max.col(t(x)), 1:ncol(x))]
 }
 # Benchmarking
 microbenchmark::microbenchmark(
-  fun2(),
-  fun2alt()
+  fun2(x),
+  fun2alt(x), unit = "relative"
 )
 ```
 
@@ -91,7 +93,7 @@ observations from our original dataset, which reflects the population.
 
 This function implements the non-parametric bootstrap:
 
-```{r p3-boot-fun, eval = FALSE}
+```{r p3-boot-fun, eval = TRUE}
 my_boot <- function(dat, stat, R, ncpus = 1L) {
   
   # Getting the random indices
@@ -99,11 +101,16 @@ my_boot <- function(dat, stat, R, ncpus = 1L) {
   idx <- matrix(sample.int(n, n*R, TRUE), nrow=n, ncol=R)
  
   # Making the cluster using `ncpus`
-  # STEP 1: GOES HERE
-  # STEP 2: GOES HERE
+  # STEP 1: Make Cluster
+  cl <- makePSOCKcluster(ncpus) 
   
-    # STEP 3: THIS FUNCTION NEEDS TO BE REPLACES WITH parLapply
-  ans <- lapply(seq_len(R), function(i) {
+  # STEP 2: Set it up (export data if needed), idx, dat
+  clusterExport(cl, varlist = c("idx", "dat", "stat"), envir = environment())
+  # clusterSetRNGstream(cl, 12312)
+  # clusterEvalQ(cl, library(ggplot2))
+  
+  # STEP 3: THIS FUNCTION NEEDS TO BE REPLACES WITH parLapply
+  ans <- parLapply(cl, seq_len(R), function(i) {
     stat(dat[idx[,i], , drop=FALSE])
   })
   
@@ -111,6 +118,7 @@ my_boot <- function(dat, stat, R, ncpus = 1L) {
   ans <- do.call(rbind, ans)
   
   # STEP 4: GOES HERE
+  stopCluster(cl)
   
   ans
   
@@ -120,16 +128,22 @@ my_boot <- function(dat, stat, R, ncpus = 1L) {
 1. Use the previous pseudocode, and make it work with parallel. Here is just an example
 for you to try:
 
-```{r p3-test-boot, eval = FALSE}
+```{r p3-test-boot, eval = TRUE}
 # Bootstrap of an OLS
 my_stat <- function(d) coef(lm(y ~ x, data=d))
+
 # DATA SIM
 set.seed(1)
-n <- 500; R <- 1e4
-x <- cbind(rnorm(n)); y <- x*5 + rnorm(n)
+n <- 500 
+R <- 1e4
+
+x <- cbind(rnorm(n))
+y <- x*5 + rnorm(n)
+
 # Checking if we get something similar as lm
 ans0 <- confint(lm(y~x))
-ans1 <- my_boot(dat = data.frame(x, y), mi_stat, R = R, ncpus = 2L)
+ans1 <- my_boot(dat = data.frame(x, y), my_stat, R = R, ncpus = 2L)
+
 # You should get something like this
 t(apply(ans1, 2, quantile, c(.025,.975)))
 ##                   2.5%      97.5%
@@ -144,9 +158,9 @@ ans0
 2. Check whether your version actually goes faster than the non-parallel version:
 
 
-```{r benchmark-problem3, eval = FALSE}
-system.time(my_boot(dat = data.frame(x, y), mi_stat, R = 4000, ncpus = 1L))
-system.time(my_boot(dat = data.frame(x, y), mi_stat, R = 4000, ncpus = 2L))
+```{r benchmark-problem3, eval = TRUE}
+system.time(my_boot(dat = data.frame(x, y), my_stat, R = 4000, ncpus = 1L))
+system.time(my_boot(dat = data.frame(x, y), my_stat, R = 4000, ncpus = 2L))
 ```
 
 ## Problem 4: Compile this markdown document using Rscript
