lab10 finished https://github.com/USCbiostats/PM566/issues/30

--- a/lab9.Rmd
+++ b/lab9.Rmd
@@ -171,6 +171,7 @@ in your terminal:
 ```bash
 Rscript --vanilla -e 'rmarkdown::render("[full-path-to-your-Rmd-file.Rmd]")' &
 ```
+Rscript --vanilla -e 'rmarkdown::render("[full-path-to-your-Rmd-file.Rmd]")' &
 
 Where `[full-path-to-your-Rmd-file.Rmd]` should be replace with the full path to
 your Rmd file... :).
